Add JWT authentication support by updating environment variables, modifying package dependencies, and enhancing API routes. Refactor user model for consistency and improve database connection handling.

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ LOG_LEVEL=info
 
 #DB CONFIG
 DATABASE_URL=postgresql://neondb_owner:npg_RK1aTJ7LnEyj@ep-frosty-block-a1silt25-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
+# JWT
+JWT_SECRET=MICCHECK123
+JWT_EXPIRY=1d
