Add Docker support with development and production configurations, including Dockerfiles and docker-compose files. Introduce .dockerignore and .env files for environment management. Implement user management routes and middleware for security and authentication. Update package dependencies and add Jest for testing.

--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ DATABASE_URL=postgresql://neondb_owner:npg_RK1aTJ7LnEyj@ep-frosty-block-a1silt25
 # JWT
 JWT_SECRET=MICCHECK123
 JWT_EXPIRY=1d
+#Arcjet
+ARCJET_ENV=development
+ARCJET_KEY=ajkey_01k5kqm8dsfn2bhzkm75sv1gzm
